# CustomCode-Analyzer-Generator

./: .dockerignore  .env_example  .flake8  .gitignore  Dockerfile  Dockerfile-dev  Makefile  README.md  pyproject.toml  run_full_benchmark.yml  sonar-project.properties  windows_setup.ps1
.github/workflows/: ci.yml  release.yml  sonar.yml
README_resources/example_generations/PythonRunner/: PythonRunner.sln
agents/: generate_and_validate.py  generate_library.py
agents/evaluation/: benchmark.py  benchmark_analysis.ipynb  benchmark_analysis.py  run_benchmark.py
agents/evaluation/ground_truth/: blake3.yml  (+7 more)
agents/generation/: llm_generation.py  prompts.py
agents/resources/: generate_upload_package.ps1
agents/utils/: logger_config.py  model_definitions.py  models.py  postvalidation.py
agents/validation/: action_map.py  build.py  constants.py  custom_exceptions.py  setup.py  test.py  utils.py  workflow.py
benchmark_results/: runs.html
benchmark_results/run_8cb9f/: benchmark_20250225_032601.parquet  binary_reverse.output  blake3.output  blake3_reflection.output  levenstein.output  lua.output  lua_reflection.output  pdf.output  pdf_reflection.output  python.output  redis.output  watermark.output  watermark_reflection.output
benchmark_results/run_92f9d/: benchmark_20250225_004305.parquet  binary_reverse.output  blake3.output  blake3_reflection.output  levenstein.output  lua.output  lua_reflection.output  pdf.output  pdf_reflection.output  python.output  python_reflection.output  redis.output  redis_reflection.output  watermark.output  watermark_reflection.output
tests/integreation/: test_basic.py
(+30 files in other folders)
